<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createCourseToolBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/main_blue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/linear_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_a_course"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_own_course"
                    android:fontFamily="@font/roboto_thin"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/linear_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_information"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_of_the_course"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_course_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@drawable/rectangle_gray_border" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/target"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_course_target_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@drawable/rectangle_gray_border" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_course_description_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@drawable/rectangle_gray_border" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/linear_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/create_course_category"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/math_category"
                        android:textSize="18sp"/>
                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_height="wrap_content"
                        android:layout_width="30dp"
                        android:padding="5dp"
                        android:layout_gravity="end"
                        style="@style/SpinnerDarkTheme"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/linear_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_course_price_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@drawable/rectangle_gray_border"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discount"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_course_discount_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@drawable/rectangle_gray_border"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/linear_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/course_cover_image"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/create_course_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/image_slider_2"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/cover_course_image_cd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/linear_border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/select_image"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:paddingHorizontal="50dp">

                   <Button
                       android:id="@+id/create_course_library"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:background="@drawable/rounded_corner_whitebg"
                       android:fontFamily="@font/roboto"
                       android:padding="10dp"
                       android:text="@string/gallery"
                       android:textAppearance="@style/TextAppearance.AppCompat.Small"
                       android:textColor="@color/black" />
               </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:paddingStart="60dp"
                android:paddingEnd="60dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/create_course_submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner_button"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="12dp"
                    android:text="Submit"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>